@@ -343,11 +343,12 @@ gtk_savebox_set_pathname (GtkSavebox *savebox, const gchar *pathname)
 
   slash = strrchr (pathname, '/');
   
-  leaf = slash ? slash - pathname + 1 : 0;
+  leaf = slash ? g_utf8_pointer_to_offset(pathname, slash) + 1 : 0;
   dot = strchr(pathname + leaf, '.');
   
   gtk_editable_select_region (GTK_EDITABLE (savebox->entry), leaf,
-			      dot ? dot - pathname : -1);
+			      dot ? g_utf8_pointer_to_offset (pathname, dot)
+			      	  : -1);
 }
 
 void
