@@ -10,6 +10,8 @@ When changing directory, remove any trailing /s from the path.
 Make sure panels never get lowered under the pinboard.
 Iconified windows are now displayed on the pinboard, not floating over
 everything else.
+Bugfix: Using a savebox when the pathname contained multi-byte characters
+	caused the initial selected region to be positioned incorrectly.
 
 10-May-2002
 ~~~~~~~~~~~
